--- a/telemetry-dashboard/package.json
+++ b/telemetry-dashboard/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -41,6 +41,7 @@
     "@angular/build": "^20.2.2",
     "@angular/cli": "^20.2.2",
     "@angular/compiler-cli": "^20.2.0",
+    "@ngx-env/builder": "^20.1.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
