--- a/telemetry-dashboard/package.json
+++ b/telemetry-dashboard/package.json
@@ -35,7 +35,8 @@
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@angular/animations": "^20.2.0"
   },
   "devDependencies": {
     "@angular/build": "^20.2.2",
